<resources>
    <string name="app_name">LoginMiApp</string>
    <string name="titulo">Login App</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="fecha_n">Fecha de nacimiento</string>
    <string name="elije_fecha">Elije una fecha</string>
    <string name="email">Email</string>
    <string name="telefono">Telefono</string>
    <string name="descripcion">Descripción</string>
    <string name="boton_login">Login</string>
    <string name="boton_editar">Editar</string>
    <string-array name="mes">
        <item>Ene</item>
        <item>Fre</item>
        <item>Mar</item>
        <item>Abr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Ago</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dis</item>
    </string-array>

</resources>