<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="@dimen/tamaño_titulo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/nombre_completo"
        app:layout_constraintTop_toBottomOf="@+id/titulo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    

    <com.google.android.material.circularreveal.CircularRevealRelativeLayout
        android:id="@+id/rlCardFecha"
        android:layout_width="@dimen/ancho_cardview"
        android:layout_height="@dimen/altura_cardview"
        app:layout_constraintTop_toBottomOf="@+id/tilNombre"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="tilNombre">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="Fecha"
            app:layout_constraintTop_toBottomOf="@+id/titulo">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFecha"
                android:text="@string/elije_fecha"
                android:layout_width="match_parent"
                android:layout_height="match_parent">



            </com.google.android.material.button.MaterialButton>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fechaN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_n"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </com.google.android.material.textview.MaterialTextView>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/fechaN"
            />


    </com.google.android.material.circularreveal.CircularRevealRelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/telefono"
        app:layout_constraintTop_toBottomOf="@+id/rlCardFecha">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@+id/tilTel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/descripcion"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </com.google.android.material.button.MaterialButton>




</androidx.constraintlayout.widget.ConstraintLayout>